--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ const userId = document.getElementById("Username").value;
            const verifyuserResult = await veruser.json()
            console.log(verifyuserResult)
 if (verifyuserResult.success){
-  getuserdetailspasskey(user,verifyuserResult.userId);
+  getuserdetailspasskey(verifyuserResult.userId);
 
 document.getElementById("loader").style.display="none"; 
 document.getElementById("message").textContent="Logged in Successful";
