--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ var enusername = document.getElementById("Username").value;
 
 var lastpage = sessionStorage.getItem("lastpage");
 if (lastpage==undefined||lastpage==""){
-  window.location="f&r/dash.html";
+ // window.location="f&r/dash.html";
 }
 else{
 window.location=lastpage;
