--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ if (lastpage==undefined||lastpage==""){
  // window.location="f&r/dash.html";
 }
 else{
-window.location=lastpage;
+//window.location=lastpage;
 sessionStorage.removeItem("lastpage");
 }
 },2000);
