--- a/f&r/past.html
+++ b/f&r/past.html
@@ -567,10 +567,13 @@ if (tdata.includes(sdata)){
     .catch(function (error) {
     // Handle errors, you can display an error message here
     console.error(error);
-    document.getElementById("loader").style.display="none"; 
-    document.getElementById("message").textContent =
-    "Failed to fetch.";
-    document.getElementById("message").style.display = "block";
+    if(ustatus!=="Going"){
+   document.getElementById("loader").style.display="none"; 
+   document.getElementById("message").textContent =
+   "Failed to Fetch Requests. Try after sometime.";
+   document.getElementById("message").style.display = "block";
+   }
+   fetchd ();
     });
        }
       fetchd ();
