--- a/f&r/index.html
+++ b/f&r/index.html
@@ -585,7 +585,7 @@ if (tdata.includes(sdata)){
    if(ustatus!=="Going"){
    document.getElementById("loader").style.display="none"; 
    document.getElementById("message").textContent =
-   "Failed to Fetch Requests. Try after sometime.";
+   "Failed to Fetch Requests. Try refreshing.";
    document.getElementById("message").style.display = "block";
    }
    fetchd ();
