--- a/f&r/past-placement-forms.html
+++ b/f&r/past-placement-forms.html
@@ -645,13 +645,16 @@ alert("PassKey is already created for this Device")
       function fetchd (){
        console.log("fetch")
        var details ="";
+       var rid  = localStorage.getItem("loggeduserdetails");
+        var uid = JSON.parse(rid).id;
+        var formid = uid+"/Placement Forms";
        fetch(
     
     "https://script.google.com/macros/s/AKfycbwwHB9VvJR94E55QmmMgxK22ZLjUcaMGjQEkfV_8mqkAvuEiIzj_skEImvAI7ULhQOI/exec",
     {
       redirect: "follow",
       method: "POST",
-      body: uname+"/Placement Forms",
+      body: formid,
       headers: {
         "Content-Type": "text/plain;charset=utf-8",
       },
