--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -809,10 +809,10 @@ formlink= "https://spcniftemt.pages.dev/form/?form="+folderid
    // Handle errors, you can display an error message here
    console.error(error);
    if(ustatus!=="Going"){
-   document.getElementById("loader").style.display="none"; 
+  /* document.getElementById("loader").style.display="none"; 
    document.getElementById("message").textContent =
    "Failed to fetch.";
-   document.getElementById("message").style.display = "block";
+   document.getElementById("message").style.display = "block";*/
    }
    });
       }
