--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -1377,6 +1377,7 @@ setInterval(() => {
   function getSelectedValues() {
     var checkboxes = document.querySelectorAll('.dropdown-content input[type="checkbox"]');
     var selectedValues = [];
+    var iselectedValues = [];
 
 console.log(checkboxes)
     var users =checkboxes[0].parentElement.parentElement.children;
@@ -1423,10 +1424,12 @@ console.log(checkboxes)
     checkboxes.forEach(function(checkbox) {
       if (checkbox.checked) {
         selectedValues.push(checkbox.value);
-      }
-    });
-    var values = selectedValues.join(", ")
-    checkboxes[0].parentElement.parentElement.parentElement.children[1].children[0].value = values;
+        iselectedValues.push(checkbox.textContent);
+        }
+      });
+      var values = selectedValues.join(", ")
+      var ivalues = iselectedValues.join(", ")
+      checkboxes[0].parentElement.parentElement.parentElement.children[1].children[0].value = ivalues;
     return values;
   }
   
