--- a/f&r/edit-companies.html
+++ b/f&r/edit-companies.html
@@ -16,8 +16,9 @@
     var loggedname = localStorage.getItem("loggedname");
     function getnotifications(){
 const url = "https://script.google.com/macros/s/AKfycbwMvTiwQJN-p_X__ExMbDjMhyk02AbI7ZHqWHte99-YPD9zYOQt9RdHBvu_uHF_d2Ol/exec" 
-
-val = loggedname+"/P";
+var rid  = localStorage.getItem("loggeduserdetails");
+var uid = JSON.parse(rid).id;
+val = uid+"/P";
 
 fetch(`${url}?header=${val}`)
    .then((response) => response.json())
@@ -72,7 +73,9 @@ function deleten(){
            document.getElementById("message").textContent = "Deleting....";
 const url = "https://script.google.com/macros/s/AKfycbw855RTJHqUblWTAR7ycdFC0Sdec4DHiOUbRzeElLx9CmUJeIYo2mSCWVSx-dElabeNvQ/exec" 
 var namef= document.getElementById("ddid").value;
-val = loggedname+"/"+namef;
+var rid  = localStorage.getItem("loggeduserdetails");
+var uid = JSON.parse(rid).id;
+val = uid+"/"+namef;
 
 fetch(`${url}?header=${val}`)
    .then((response) => response.json())
@@ -101,8 +104,9 @@ var namefd= document.getElementById("noti-text-date").value;
            document.getElementById("loader").style.display="block"; 
            document.getElementById("message").textContent = "Adding....";
 const url = "https://script.google.com/macros/s/AKfycbxyPXT2RWDUuvhB3UC8Ku0lZRjvgdlxhPuxQByimNkEtFolhH5F9BugPQGPVrNrBgdf/exec" 
-
-val = namef+"/"+namefd+"/"+loggedname+"/";
+var rid  = localStorage.getItem("loggeduserdetails");
+var uid = JSON.parse(rid).id;
+val = namef+"/"+namefd+"/"+uid+"/";
 document.getElementById("noti-text").value = "";
 document.getElementById("noti-text-date").value = "";
 fetch(`${url}?header=${val}`)
@@ -137,8 +141,9 @@ console.log(namef)
            document.getElementById("loader").style.display="block"; 
            document.getElementById("message").textContent = "Updating....";
 const url = "https://script.google.com/macros/s/AKfycbzl0nLEXK3yHbV5ldjOYaiMLdzeQo19NpSBMqp3XdNEWxuxzKC94zdslU7dR_K5QnbF/exec" 
-
-val = namef+"/"+namefd+"/"+loggedname+"/"+hindex;
+var rid  = localStorage.getItem("loggeduserdetails");
+var uid = JSON.parse(rid).id;
+val = namef+"/"+namefd+"/"+uid+"/"+hindex;
 document.getElementById("enoti-text").value = "";
 document.getElementById("enoti-text-date").value = "";
 fetch(`${url}?header=${val}`)
