--- a/f&r/edit-notification.html
+++ b/f&r/edit-notification.html
@@ -377,6 +377,7 @@ document.getElementById("popup-11").classList.toggle("active");
               <div class="close-btn" onclick="togglePopup11()">&times;</div>
           
               <h1 style="margin-top: 50px;line-height: 40px;">Enter the notification</h1>
+              <span style="color: rgba(255, 0, 0, 0.668);">The notification will last for 7 days from now</span>
               <textarea style="margin-top: 10px; margin-bottom: 30px;width: 100%;" name="" id="noti-text"></textarea><br>
               <div class="dropdown" style="display: flex;flex-direction: column;width: 100%; margin-top: -20px; margin-bottom: 50px;justify-content: left;align-items: start;">
                 <span class="q">Change access</span>
