--- a/f&r/edit-notification.html
+++ b/f&r/edit-notification.html
@@ -68,6 +68,7 @@ document.getElementById("lat-notifications").style.display="block";
       document.getElementById("lat-notifications").innerHTML=`<span id="no-cir-form">No Latest Notifications</span>`;
 
       document.getElementById("lat-notifications").style.display="flex";
+      getnotifications()
       
     }
    })
