--- a/f&r/past.html
+++ b/f&r/past.html
@@ -461,7 +461,7 @@ var uid = JSON.parse(rid).id;
    }
    console.log(r);
  
-    for(var k=r.length-1; k<=0;k--){
+   for(var k=r.length-1; k>=0;k--){
 
       const searchdata = document.querySelector('.input-group input');
     if(searchdata.value==""){
