--- a/f&r/index.html
+++ b/f&r/index.html
@@ -297,9 +297,11 @@ io.on("connection", (socket) => {
 });
 
 // client-side
-socket.on("connect", (newUserId) => {
-  console.log(socket.id); // x8WIv7-mJelg7on_ALbx
+
+socket.on(' connect', function() { 
+    socket. emit( 'user_connected', newUserId);
 });
+
 
 socket.on("disconnect", () => {
   console.log(socket.id); // undefined
